# lib/api-spec/openapi.yaml
@@ -1931,6 +1931,8 @@ components:
       type: object
       required: [userId, username, joinedAt]
       properties:
+        id:
+          type: integer
         userId:
           type: integer
         username:
@@ -1939,8 +1941,22 @@ components:
           type: ["string", "null"]
         avatarUrl:
           type: ["string", "null"]
+        role:
+          type: ["string", "null"]
         joinedAt:
           type: string
+        roles:
+          type: array
+          items:
+            type: object
+            required: [id, name, color]
+            properties:
+              id:
+                type: integer
+              name:
+                type: string
+              color:
+                type: string
 
     CreateDmInput:
       type: object
